--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.8",
+    "embla-carousel-autoplay": "^7.0.2",
+    "embla-carousel-react": "^7.0.2",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
