--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.8",
+    "date-fns": "^2.29.2",
     "embla-carousel-autoplay": "^7.0.2",
     "embla-carousel-react": "^7.0.2",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
+    "react-calendar": "^3.7.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
