--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "^10.4.8",
     "date-fns": "^2.29.2",
     "embla-carousel-autoplay": "^7.0.2",
@@ -19,6 +22,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
+    "sass": "^1.54.8",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
