--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-calendar": "^3.7.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "sass": "^1.54.8",
     "styled-components": "^5.3.5"
